# sekai-custom-profile-sdk

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.en.md  README.md  cliff.toml
crates/allium-renderer/: Cargo.toml  build.rs
crates/allium-renderer-cli/: Cargo.toml
crates/allium-renderer-cli/src/: fetch.rs  main.rs  serve.rs
crates/allium-renderer-core/: Cargo.toml
crates/allium-renderer-core/locales/: cn.json  en.json  jp.json  kr.json  tw.json
crates/allium-renderer-core/src/: authoring_document.rs  authoring_session.rs  general_recipe.rs  lib.rs  locale.rs  masterdata.rs  profile_data.rs  profile_resolve.rs  profile_scene.rs  profile_transform.rs  sdf_geometry.rs  tmp_text.rs
crates/allium-renderer-core/src/profile_layout/: cards.rs  extras.rs  header.rs  mod.rs  music.rs  stats.rs
crates/allium-renderer-core/src/profile_source/: card.rs  elements.rs  mod.rs
crates/allium-renderer-host/: Cargo.toml
crates/allium-renderer-host/src/: lib.rs  provider.rs  table.rs
crates/allium-renderer-wasm/: Cargo.toml  Dockerfile  LICENSE-EXCEPTION  NOTICE  README.en.md  README.md  build.sh  package-lock.json  package.json  tsconfig.json
crates/allium-renderer-wasm/.cargo/: config.toml
crates/allium-renderer-wasm/demo/: README.md  demo.css  demo.js  index.html  serve.py
crates/allium-renderer-wasm/demo/workbench/: emptySekaiResourceProvider.js  inputPersistence.js  inspector.js  interactions.js  session.js  telemetry.js
crates/allium-renderer-wasm/freetype-min/: ftmodule.h
crates/allium-renderer-wasm/scripts/: audit-public-package.mjs  copy-artifacts.mjs  measure-wasm-size.mjs  serve-demo.mjs  verify-wasm-runtime.mjs
crates/allium-renderer-wasm/scripts/test/: authored-text-hit-geometry.test.mjs  authoring-layer-preview-transform.test.mjs  demo-inspector-model.test.mjs  demo-interactions.test.mjs  demo-resource-provider.test.mjs  demo-session-lifecycle.test.mjs  font-sdf-atlas-telemetry.test.mjs  general-text-render-placement.test.mjs  m2-atlas-contract.test.mjs  m2-cache-contract.test.mjs  m2-mask-contract.test.mjs  m2-telemetry-contract.test.mjs  m2-worker-contract.test.mjs  m3-browser-semantic-resources.test.mjs  m3-image-resource-cache.test.mjs  m3-preview-transform-texture-layout.test.mjs  m3-semantic-command-planner.test.mjs  m3-semantic-geometry.test.mjs  m3-semantic-text-glyph-bridge.test.mjs  m4-shape-sdf-shader.test.mjs  mobile-glsl-precision.test.mjs  numeric-text-regions.test.mjs  prebuilt-atlas-page-cache.test.mjs  prebuilt-font-contract.test.mjs  register-typescript.mjs  v02-browser-esm-artifact.test.mjs  v02-empty-scene-contract.test.mjs  v02-font-provider.test.mjs  v02-interaction-dump-contract.test.mjs  v02-localization-provider.test.mjs  v02-release-contract.test.mjs  v02-runtime-observability.test.mjs  v02-worker-boundary.test.mjs  v02-worker-protocol-contract.test.mjs
crates/allium-renderer-wasm/src/: atlas.rs  authoring.ts  authoring_runtime.rs  edt.rs  emscripten.ts  fontProvider.ts  fontSdfAtlas.ts  geometry.rs  glyph_plan.rs  index.ts  layout.rs  lib.rs  localizationProvider.ts  main.rs  masterdata_runtime.rs  originPrebuiltSdfAtlasPackage.ts  prebuiltSdfAtlas.ts  protocol.ts  renderer.ts  resourceProvider.ts  scene.rs  worker-client.ts  worker.ts
crates/allium-renderer-wasm/src/cache/: glyphPersistentCache.ts  indexedDbGlyphRecordStore.ts  sessionImageResourceCache.ts
crates/allium-renderer-wasm/src/gpu/: browserSemanticResources.ts  generalTextRenderPlacement.ts  previewTransformTextureLayout.ts  semanticCommandGeometry.ts  semanticCommandPlanner.ts  semanticTextGlyphBridge.ts  semanticWebglSceneRenderer.ts  slotRanges.ts  webglSdfAtlasTexture.ts  webglSdfGlyphPipeline.ts  webglSemanticCommandExecutor.ts
crates/allium-renderer-wasm/src/interaction/: numericTextRegions.ts
crates/allium-renderer-wasm/src/telemetry/: rendererTelemetry.ts
crates/allium-renderer-wasm/src/types/: atlas.ts  authoring.ts  core.ts  freeType.ts  glyph.ts  layout.ts  text.ts
crates/allium-renderer-wasm/src/worker/: glyphWorkScheduler.ts
crates/allium-renderer/examples/: bench_render.rs  compare_sdf.rs  render_bonds_honor.rs
crates/allium-renderer/native/: jpeg_turbo_encoder.c  x264_encoder.c
crates/allium-renderer/src/: animation.rs  asset_keys.rs  assets.rs  compiled_profile.rs  context.rs  core_shadow.rs  deck_result.rs  error.rs  executor.rs  init.rs  instantiate.rs  jpeg_turbo.rs  lib.rs  masterdata.rs  mysekai_harvest.rs  personal_profile.rs  primitives.rs  profile.rs  profile_backend.rs  profile_card.rs  profile_compositor.rs  ranking.rs  region.rs  render_document.rs  render_object.rs  render_object_catalog.rs  renderer.rs  resource_provider.rs  semantic_resolve.rs  traits.rs  transform.rs  widget_node.rs
crates/allium-renderer/src/elements/: image.rs  mod.rs  shape.rs
crates/allium-renderer/src/elements/generals/: challenge_live.rs  char_rank.rs  comment.rs  deck.rs  honors_panel.rs  leader_member.rs  mod.rs  music_clear.rs  music_clear_tab.rs  mvp_superstar.rs  player_avatar.rs  player_level.rs  player_name.rs  sdf_text.rs  story_favorite.rs  total_power.rs
crates/allium-renderer/src/elements/honor/: bonds.rs  common.rs  mod.rs  standard.rs
crates/allium-renderer/src/profile_compositor/: simd_x86.rs
crates/allium-renderer/src/sdf/: atlas.rs  fallback_cache.rs  mod.rs  rasterize.rs  shape.rs  shape_atlas.rs  tile.rs
crates/allium-renderer/src/sdf/outline/: edt.rs  geometry.rs  mod.rs
crates/allium-renderer/src/sdf/tile/: simd_x86.rs
crates/allium-renderer/src/text/: font.rs  measure.rs  mod.rs
crates/allium-renderer/src/types/: card.rs  elements.rs  masterdata.rs  mod.rs
crates/allium-renderer/src/widgets/: card_thumbnail.rs  card_util.rs  glass_panel.rs  image.rs  mod.rs  panel.rs  stats_badge.rs  text.rs  text_badge.rs  theme.rs
crates/allium-renderer/tests/data/: font_atlas_export_sample.json
crates/allium-renderer/tools/: calibrate_text.rs  check_fonts.rs  dump_outline_sdf.rs  render_deck.rs  render_profile.rs  render_ranking_preview.rs  render_task043_layer.rs  sample_deck.json
(+30 files in other folders)
