[workspace]
resolver = "2"
members = [
    "crates/allium-renderer",
    "crates/allium-renderer-host",
    "crates/allium-renderer-cli",
    "crates/allium-renderer-wasm",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[profile.release]
lto = "thin"
