[package]
name = "allium-renderer-cli"
version = "0.2.0"
edition = "2021"
description = "render-card: custom profile card rendering CLI"
license = "AGPL-3.0-only"

[[bin]]
name = "render-card"
path = "src/main.rs"

[features]
# Skia is the production default. Environments without the native toolchain may use
# `--no-default-features` for a compile-only check; rendering then fails at runtime.
default = ["skia"]
skia = ["allium-renderer/skia"]

[dependencies]
allium-renderer = { path = "../allium-renderer" }
allium-renderer-host = { path = "../allium-renderer-host" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
# Synchronous HTTP for fetching masterdata/assets from a URL prefix.
# rustls TLS so https works without a system OpenSSL dependency.
ureq = { version = "2.12", default-features = false, features = ["tls"] }
