[package]
name = "allium-renderer-core"
version = "0.2.1"
edition.workspace = true
description = "Shared deterministic scene, dynamic state, command, dump, and cache core for allium renderer"
license.workspace = true
publish = false

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
