[package]
name = "allium-renderer-host"
version = "0.2.1"
edition = "2021"
description = "Shared host layer: JSON-backed MasterDataProvider for CLI and wasm frontends"
license = "AGPL-3.0-only"

[dependencies]
allium-renderer = { path = "../allium-renderer" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
