[package]
name = "allium-renderer-wasm"
version = "0.2.1"
edition = "2021"
description = "Project SEKAI profile scene and minimal FreeType runtime for the Allium WebGL2 renderer"
license = "AGPL-3.0-only"
publish = false

[lib]
crate-type = ["rlib"]

[[bin]]
name = "allium_renderer_wasm"
path = "src/main.rs"

[dependencies]
allium-renderer-core = { path = "../allium-renderer-core" }
base64 = "0.22"
freetype-rs = "0.38"
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
web-time = "1"
