[package]
name = "allium-renderer"
version = "0.2.0"
edition = "2021"
description = "Skia CPU rendering engine: scene-graph interpreter for game cards and WidgetDocument info-graphics"
license = "AGPL-3.0-only"

[dependencies]
allium-renderer-core = { path = "../allium-renderer-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
lru = "0.12"
rayon = { version = "1.11", optional = true }
chrono = { version = "0.4", optional = true }
skia-safe = { version = "0.97", optional = true }
freetype-rs = { version = "0.38", optional = true }
ttf-parser = { version = "0.25", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }

[dev-dependencies]
axum = "0.8"
allium-renderer-host = { path = "../allium-renderer-host" }

[package.metadata.docs.rs]
features = ["skia"]

[features]
default = []
# Internal implementation gate for all Skia rendering code.
# Enable `skia` (complete native preset) or `skia-minimal`, not this feature directly.
skia-core = ["dep:skia-safe", "dep:freetype-rs", "dep:ttf-parser"]
# Native production preset matching the feature combination shipped by skia-binaries.
skia = [
    "skia-core",
    "parallel",
    "scenes",
    "skia-safe/textlayout",
    "skia-safe/svg",
    "skia-safe/vulkan",
    "skia-safe/webp",
]
# Minimal Skia feature set for non-browser experiments; no GPU, text layout, or SVG.
skia-minimal = ["skia-core", "skia-safe/webp"]
# Dedicated rayon raster pool. Disabling it preserves byte-identical serial output.
parallel = ["dep:rayon"]
# Application-specific native scenes.
scenes = ["dep:chrono"]
dev = ["skia", "dep:tracing-subscriber"]

[[example]]
name = "bench_render"
required-features = ["dev"]

[[example]]
name = "compare_sdf"
required-features = ["dev"]

[[example]]
name = "render_bonds_honor"
required-features = ["dev"]

[[bin]]
name = "calibrate-text"
path = "tools/calibrate_text.rs"
required-features = ["dev"]

[[bin]]
name = "check-fonts"
path = "tools/check_fonts.rs"
required-features = ["dev"]

[[bin]]
name = "dump-outline-sdf"
path = "tools/dump_outline_sdf.rs"
required-features = ["dev"]

[[bin]]
name = "render-deck"
path = "tools/render_deck.rs"
required-features = ["dev"]

[[bin]]
name = "render-ranking-preview"
path = "tools/render_ranking_preview.rs"
required-features = ["dev"]

[[bin]]
name = "render-task043-layer"
path = "tools/render_task043_layer.rs"
required-features = ["dev"]

[[bin]]
name = "render-profile"
path = "tools/render_profile.rs"
required-features = ["dev"]
